[package]
name = "first"
version = "0.1.0"
authors = ["sunakan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
tokio = {version = "0.2.21", features = ["macros"]}
async-std = {version = "1.6.1", features = ["attributes"]}
rand = "0.7.3"
